--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -10,6 +10,7 @@
   <meta name="author" content="Mahdi Hosseinzadeh, Babak Shahriari"/>
   <meta name="_csrf" th:content="${_csrf.token}"/>
   <meta name="_csrf_header" th:content="${_csrf.headerName}"/>
+  <!-- For android browsers [https://stackoverflow.com/q/26960703] -->
   <meta name="theme-color" th:content="${#themes.code('primary-color')}"/>
   <link rel="icon" type="image/png" sizes="32x32" th:href="@{|/img/favicon-${#themes.code('name')}.png|}"/>
   <link rel="stylesheet" th:href="@{/css/main.min.css}"/>
