--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -136,7 +136,7 @@
         </div>
         <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
         <button class="btn" type="submit" th:text="#{sign-up}">Sign up</button>
-        <p th:utext="#{prompt.log-in('<span class=log-prompt>', '</span>')}"></p>
+        <p><span th:text="#{prompt.log-in-part-1}"></span> <span class="log-prompt" th:text="#{prompt.log-in-part-2}"></span></p>
       </form>
     </div>
     <div id="login-wrapper">
@@ -162,7 +162,7 @@
         <div class="invalid-login" th:text="#{prompt.login-fail}">Login failed</div>
         <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
         <button class="btn" type="submit" th:text="#{log-in}">Log in</button>
-        <p th:utext="#{prompt.sign-up('<span class=log-prompt>', '</span>')}"></p>
+        <p><span th:text="#{prompt.sign-up-part-1}"></span> <span class="log-prompt" th:text="#{prompt.sign-up-part-2}"></span></p>
       </div>
     </div>
   </div>
