Update the date in copyright section to be formatted by locale

--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -310,7 +310,11 @@
       </div>
     </div>
   </div>
-  <div class="copyright" th:text="' © ' + #{name} + ' ' + ${T(java.time.LocalDate).now().getYear()}"></div>
+  <div class="copyright">
+    <span>©</span>
+    <span th:text="#{name}"></span>
+    <span th:text="${#calendars.format(#calendars.createToday(), 'yyyy')}"></span>
+  </div>
 </footer>
 
 </body>
