--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -178,11 +178,11 @@
         <div class="usr-name" th:text="${post.author.username}">Username</div>
         <div class="score" th:fragment="score" th:with="score=${post.author.score}">
           <span th:text="${score}">Score</span>
-          <img th:if="${score lt 100}" title="Novice!" th:title="#{novice}"
+          <img th:if="${score < 100}" title="Novice!" th:title="#{novice}"
                th:src="@{/img/ic-medal-beginner.svg}" alt="medal"/>
-          <img th:if="${score gt 99 and score lt 1000}" alt="medal" th:src="@{/img/ic-medal-bronze.svg}"/>
-          <img th:if="${score gt 999 and score lt 50000 }" th:src="@{/img/ic-medal-silver.svg}" alt="medal"/>
-          <img th:if="${score gt 49999}" th:src="@{/img/ic-medal-gold.svg}" alt="medal"/>
+          <img th:if="${score > 99 && score < 1000}" alt="medal" th:src="@{/img/ic-medal-bronze.svg}"/>
+          <img th:if="${score > 999 && score < 50000 }" th:src="@{/img/ic-medal-silver.svg}" alt="medal"/>
+          <img th:if="${score > 49999}" th:src="@{/img/ic-medal-gold.svg}" alt="medal"/>
         </div>
       </div>
     </div>
