--- a/src/main/resources/templates/post.html
+++ b/src/main/resources/templates/post.html
@@ -49,7 +49,7 @@
                   <input type="hidden" name="postId" th:value="${post.id}"/>
                   <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
                   <svg class="pin-icon" viewBox="0 0 40 60"
-                       th:classappend="${(post.pinned?'pinned':'') + (authenticated and #authorization.expression('hasAnyRole(''EDITOR'',''ADMIN'')')?'':' disabled')}">
+                       th:classappend="${(post.pinned?'pinned':'') + (authenticated && #authorization.expression('hasAnyRole(''EDITOR'',''ADMIN'')')?'':' disabled')}">
                     <path
                         d="m 39.008476,39.9 c 0.1,0.9 -0.7,1.8 -1.6,1.8 h -15.7 v 16 c 0,1.2 -1,2.2 -2.2,2.2 -1.2,0 -2.2,-1 -2.2,-2.2 v -16 H 1.6084759 c -0.90000005,0 -1.70000005,-0.8 -1.60000005,-1.8 0.6,-6.2 4.00000005,-11.6 9.10000005,-14.8 V 11.6 c -2.7,-2.5 -4.6,-5.9 -5.1,-9.7 -0.1,-1 0.7,-1.9 1.7,-1.9 H 33.308476 c 1,0 1.9,0.9 1.7,1.9 -0.5,3.9 -2.3,7.3 -5.1,9.7 v 13.5 c 5.1,3.2 8.5,8.5 9.1,14.8 z"></path>
                     <title th:text="${authenticated}?#{post.pin}:#{prompt.not-logged-in}"></title>
@@ -57,7 +57,7 @@
                 </label>
               </form>
               <svg class="chng-cats-icon" viewBox="1 0 33 33"
-                   th:classappend="${authenticated and #authorization.expression('hasAnyRole(''EDITOR'',''ADMIN'')') ?'':'disabled'}">
+                   th:classappend="${authenticated && #authorization.expression('hasAnyRole(''EDITOR'',''ADMIN'')') ?'':'disabled'}">
                 <path
                     d="m 32.00025,1.997 c 0,-1.102 -0.896,-1.997 -2,-1.997 l -13,0.012 c -0.401,0 -0.688,0.132 -1.083,0.527 l -15.378,15.358 c -0.719,0.718 -0.719,1.88 0,2.598 l 13.14,12.966 c 0.719,0.719 1.883,0.719 2.603,0 l 15.25,-15.328 c 0.396,-0.394 0.468,-0.802 0.468,-1.152 z M 25.01225,10 c -1.657,0 -3.004,-1.345 -3.004,-3 0,-1.655 1.347,-3 3.004,-3 1.657,0 3.003,1.345 3.003,3 0,1.655 -1.346,3 -3.003,3 z"></path>
                 <title
@@ -85,7 +85,7 @@
                   <input type="hidden" name="postId" th:value="${post.id}"/>
                   <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
                   <svg class="del-icon" viewBox="22 15 56 70"
-                       th:classappend="${authenticated and #authorization.expression('hasAnyRole(''EDITOR'',''ADMIN'')')?'':'disabled'}">
+                       th:classappend="${authenticated && #authorization.expression('hasAnyRole(''EDITOR'',''ADMIN'')')?'':'disabled'}">
                     <path
                         d="m 75,24 c 1.380712,0 2.5,1.119288 2.5,2.5 0,1.380712 -1.119288,2.5 -2.5,2.5 h -0.03512 c -0.276252,0 -0.508307,0.218908 -0.51879,0.501952 L 72.646164,78.099851 C 72.514753,81.647942 69.549076,84.5 65.999974,84.5 H 34.000025 c -3.55094,0 -6.514978,-2.857445 -6.646189,-6.400149 L 25.553914,29.501952 C 25.543646,29.224731 25.317587,29 25.035124,29 H 25 c -1.380712,0 -2.5,-1.119288 -2.5,-2.5 0,-1.380712 1.119288,-2.5 2.5,-2.5 h 12.188381 c 0.274648,0 0.559726,-0.218512 0.633624,-0.477154 l 0.81519,-2.853168 C 39.473493,17.742638 42.447134,15.5 45.491497,15.5 h 9.017006 c 3.044724,0 6.017774,2.241833 6.854302,5.169678 l 0.81519,2.853168 C 62.253288,23.786371 62.534509,24 62.811619,24 Z M 48,38 v 34 c 0,1.104569 0.895431,2 2,2 1.104569,0 2,-0.895431 2,-2 V 38 c 0,-1.104569 -0.895431,-2 -2,-2 -1.104569,0 -2,0.895431 -2,2 z m -10.999136,0.0588 1,34 c 0.03247,1.104092 0.953842,1.972811 2.057934,1.940337 1.104092,-0.03247 1.972811,-0.953841 1.940338,-2.057933 l -1,-34 c -0.03247,-1.104092 -0.953842,-1.972811 -2.057934,-1.940338 -1.104092,0.03247 -1.972811,0.953842 -1.940338,2.057934 z m 22,-0.117596 -1,34 c -0.03247,1.104092 0.836246,2.02546 1.940338,2.057933 1.104092,0.03247 2.02546,-0.836245 2.057934,-1.940337 l 1,-34 c 0.03247,-1.104092 -0.836246,-2.02546 -1.940338,-2.057934 -1.104092,-0.03247 -2.02546,0.836246 -2.057934,1.940338 z M 43.392153,24 c -0.279677,0 -0.44657,-0.209403 -0.371066,-0.473666 l 0.423728,-1.48305 C 43.667778,21.262913 44.679368,20.5 45.491497,20.5 h 9.017006 c 0.812648,0 1.823532,0.762259 2.046682,1.543284 l 0.423728,1.48305 C 57.053656,23.787932 56.890751,24 56.607847,24 Z"></path>
                     <title th:text="${authenticated}?#{post.delete}:#{prompt.not-logged-in}"></title>
@@ -98,7 +98,7 @@
                   <input type="hidden" name="postId" th:value="${post.id}"/>
                   <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
                   <svg class="rep-icon" viewBox="13 13 74 74"
-                       th:classappend="${authenticated and #authorization.expression('hasAnyRole(''EDITOR'',''ADMIN'')')?'':'disabled'}">
+                       th:classappend="${authenticated && #authorization.expression('hasAnyRole(''EDITOR'',''ADMIN'')')?'':'disabled'}">
                     <path
                         d="M 50,13.5 C 29.874,13.5 13.5,29.874 13.5,50 13.5,70.126 29.874,86.5 50,86.5 70.126,86.5 86.5,70.126 86.5,50 86.5,29.874 70.126,13.5 50,13.5 Z m 3.5,57.23589 h -7 v -6.77 h 7 z m 0,-15.497688 h -7 v -28.59466 h 7 z"></path>
                     <title
@@ -129,7 +129,7 @@
           <button type="submit" class="btn" th:text="#{send}"></button>
         </div>
         <div class="comments">
-          <p th:text="${post.commentsCount} + ' ' + #{comments} + (${post.commentsCount gt 0} ? ':':'')"></p>
+          <p th:text="${post.commentsCount} + ' ' + #{comments} + (${post.commentsCount > 0} ? ':':'')"></p>
           <div class="comment" th:each="comment:${post.comments}">
             <div class="comment-author">
               <img th:alt="${comment.author.username}" onerror="this.src='/img/placeholder.svg'"
