--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -9,12 +9,12 @@
 
 <main>
   <div th:replace="fragments::prompt"></div>
-  <div th:class="${posts.size() gt 0 ? 'result-prompt' : 'no-result-prompt'}">
+  <div th:class="${posts.size() > 0 ? 'result-prompt' : 'no-result-prompt'}">
     <img th:if="${posts.size() == 0}" th:src="@{/img/ic-lamp.svg}" alt="no results">
     <div th:if="${posts.size() == 0}">No results found!</div>
-    <div th:if="${posts.size() gt 0}">
+    <div th:if="${posts.size() > 0}">
       <!-- TODO: Use standard Java choice formatting. See https://docs.oracle.com/en/java/javase/11/docs/api/java.base/java/text/MessageFormat.html -->
-      <span th:text="${posts.size()} + ' result' + ${posts.size() gt 1 ? 's':''} + ' found'"></span>
+      <span th:text="${posts.size()} + ' result' + ${posts.size() > 1 ? 's':''} + ' found'"></span>
       <span th:if="${posts.size()} == ${@environment.getProperty('search.max-results')}">
         <!-- todo: refactor the following to refrence the constant instead of property -->
         (only top <span th:text="${@environment.getProperty('search.max-results')}"></span> displayed)
