Improve some thymeleaf condition evaluations

--- a/src/main/resources/templates/category.html
+++ b/src/main/resources/templates/category.html
@@ -12,7 +12,7 @@
 
 <main>
   <div th:replace="fragments::prompt"></div>
-  <div class="no-result-prompt" th:if="${posts.numberOfElements == 0}">
+  <div class="no-result-prompt" th:if="${posts.isEmpty()}">
     <img th:src="@{/img/ic-lamp.svg}" alt="empty"/>
     <div> Sorry, there is no post in this category.<br/>
       Be the first one and create a post here!
