--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -9,10 +9,10 @@
 
 <main>
   <div th:replace="fragments::prompt"></div>
-  <div th:class="${posts.size() > 0 ? 'result-prompt' : 'no-result-prompt'}">
-    <img th:if="${posts.size() == 0}" th:src="@{/img/ic-lamp.svg}" alt="no results">
-    <div th:if="${posts.size() == 0}">No results found!</div>
-    <div th:if="${posts.size() > 0}">
+  <div th:class="${posts.isEmpty() ? 'no-result-prompt' : 'result-prompt'}">
+    <img th:if="${posts.isEmpty()}" th:src="@{/img/ic-lamp.svg}" alt="no results">
+    <div th:if="${posts.isEmpty()}">No results found!</div>
+    <div th:if="${not posts.isEmpty()}">
       <!-- TODO: Use standard Java choice formatting. See https://docs.oracle.com/en/java/javase/11/docs/api/java.base/java/text/MessageFormat.html -->
       <span th:text="${posts.size()} + ' result' + ${posts.size() > 1 ? 's':''} + ' found'"></span>
       <span th:if="${posts.size()} == ${@environment.getProperty('search.max-results')}">
