--- a/src/main/resources/templates/category.html
+++ b/src/main/resources/templates/category.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html th:lang="${#locale}" xmlns:th="http://www.thymeleaf.org">
-<head>
-  <th:block th:include="fragments::head(titleAppend=' - ' + #{${catName}} + ' ' + #{posts})"/>
+
+<head th:replace="fragments::head(~{this::title}, ~{}, ~{this::link})">
+  <title th:text="#{page-title.category(#{${catName}})}"></title>
   <link rel="stylesheet" th:href="@{/css/category.min.css}">
 </head>
 
