--- a/src/main/resources/templates/create-post.html
+++ b/src/main/resources/templates/create-post.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<!--suppress SyntaxError -->
 <html th:lang="${#locale}" xmlns:th="http://www.thymeleaf.org">
-<head>
-  <th:block th:include="fragments::head(titleAppend=#{post.create})"/>
+
+<head th:replace="fragments::head(~{this::title}, ~{}, ~{this::link})">
+  <title th:text="#{post.create}"></title>
   <link rel="stylesheet" th:href="@{/css/create-post.min.css}">
 </head>
 
