--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html th:lang="${#locale}" xmlns:th="http://www.thymeleaf.org">
-<head>
-  <th:block th:include="fragments::head(titleAppend=' - Error!')"/>
+
+<head th:replace="fragments::head(~{this::title}, ~{}, ~{this::link})">
+  <title th:text="#{page-title.error}"></title>
   <link rel="stylesheet" th:href="@{/css/error.min.css}">
 </head>
 
