--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html th:lang="${#locale}" xmlns:th="http://www.thymeleaf.org">
-<head>
-  <th:block th:include="fragments::head(titleAppend='')"/>
+
+<head th:replace="fragments::head(~{this::title}, ~{this::meta}, ~{})">
+  <title th:text="#{name}"></title>
   <meta name="description" th:content="#{description}"/>
 </head>
 
@@ -29,7 +30,7 @@
     <section class="ordinary-cards">
       <div class="category" th:each="categoryPosts:${categoriesPosts}">
         <h2 class="subject" th:text="#{${categoryPosts.key.name().toLowerCase()}}"></h2>
-        <div class="card" th:each="post:${categoryPosts.value}" th:attr="data-post-id=${post.id}">
+        <div class="card" th:each="post:${categoryPosts.value}" th:data-post-id="${post.id}">
           <div th:replace="fragments::card-top-section"></div>
           <div class="card-bottom">
             <div class="hr"></div>
