--- a/src/main/resources/templates/post.html
+++ b/src/main/resources/templates/post.html
@@ -142,7 +142,7 @@
       </div>
     </section>
 
-    <!-- similar posts -->
+    <!--/* Similar posts */-->
     <aside class="similar-container">
       <div class="card" th:each="post:${similarPosts}">
         <div class="top-container">
