--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -16,10 +16,10 @@
     <img th:if="${posts.isEmpty()}" th:src="@{/img/ic-lamp.svg}" alt="no results">
     <div th:if="${posts.isEmpty()}">No results found!</div>
     <div th:if="${not posts.isEmpty()}">
-      <!-- TODO: Use standard Java choice formatting. See https://docs.oracle.com/en/java/javase/11/docs/api/java.base/java/text/MessageFormat.html -->
+      <!--/* TODO: Use standard Java choice formatting. See https://docs.oracle.com/en/java/javase/11/docs/api/java.base/java/text/MessageFormat.html */-->
       <span th:text="${posts.size()} + ' result' + ${posts.size() > 1 ? 's':''} + ' found'"></span>
       <span th:if="${posts.size()} == ${@environment.getProperty('search.max-results')}">
-        <!-- todo: refactor the following to refrence the constant instead of property -->
+        <!--/* TODO: Refactor the following to reference the constant instead of property */-->
         (only top <span th:text="${@environment.getProperty('search.max-results')}"></span> displayed)
       </span>
     </div>
