--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -13,13 +13,14 @@
 <main>
   <div th:replace="fragments::prompt"></div>
   <div th:class="${posts.isEmpty() ? 'no-result-prompt' : 'result-prompt'}">
-    <img th:if="${posts.isEmpty()}" th:src="@{/img/ic-lamp.svg}" alt="no results">
-    <div th:if="${posts.isEmpty()}">No results found!</div>
+    <th:block th:if="${posts.isEmpty()}">
+      <img th:src="@{/img/ic-lamp.svg}" alt="no results">
+      <div th:text="#{prompt.no-search-result}"></div>
+    </th:block>
     <div th:if="${not posts.isEmpty()}">
       <span th:text="#{title.search-result(${posts.size()})}"></span>
-      <span th:if="${posts.size()} == ${@environment.getProperty('search.max-results')}">
-        <!--/* TODO: Refactor the following to reference the constant instead of property */-->
-        (only top <span th:text="${@environment.getProperty('search.max-results')}"></span> displayed)
+      <span th:if="${posts.size() > T(ir.ceno.service.SearchService).SEARCH_MAX_RESULTS}"
+            th:text="#{prompt.max-search-results-shown(${T(ir.ceno.service.SearchService).SEARCH_MAX_RESULTS})}">
       </span>
     </div>
   </div>
