--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -316,7 +316,8 @@
   <div class="copyright">
     <span>©</span>
     <span th:text="#{name}"></span>
-    <span th:text="${#calendars.format(#calendars.createToday(), 'yyyy')}"></span>
+    <!--/* <span th:text="${#calendars.format(#calendars.createToday(), 'yyyy')}"></span> */-->
+    <span th:text="${@dateTimeFormatter.formatNow('yyyy')}"></span>
   </div>
 </footer>
 
