Add the number extension to the Persian locale in lang attribute of HTML and remove it in other places

--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -288,7 +288,8 @@
               <img class="lang-flag" th:src="@{/img/ic-lang-en.png}" alt="english"/>
               <span class="lang-name">English</span>
             </div>
-            <div class="lang" data-lang-name="fa">
+            <!--/* "fa-u-nu-arabext" is Farsi locale with Persian digits. See CenoDateTimeFormatter class for more info. */-->
+            <div class="lang" data-lang-name="fa-u-nu-arabext">
               <img class="lang-flag" th:src="@{/img/ic-lang-fa.png}" alt="farsi"/>
               <span class="lang-name">فارسی</span>
             </div>
