--- a/src/main/resources/static/css/theme-colors-pink.css
+++ b/src/main/resources/static/css/theme-colors-pink.css
@@ -1,5 +1,5 @@
 :root {
-    --primary-color: #E91E63;
+    --primary-color: #e91e63;
     --secondary-color: #D81B60;
     --tertiary-color: #C2185B;
 }
