--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -1397,14 +1397,15 @@ progress::-webkit-progress-value {
     display: flex;
 }
 
-.lang:hover .lang-flag {
-    filter: grayscale(0%);
-}
-
 .lang-flag {
     filter: grayscale(100%) opacity(40%);
     margin-right: 8px;
     width: 18px;
+    transition: all 100ms;
+}
+
+.lang:hover .lang-flag {
+    filter: grayscale(0%);
 }
 
 .lang-name {
@@ -1468,16 +1469,26 @@ progress::-webkit-progress-value {
     display: flex;
     flex-flow: row;
     justify-content: space-around;
-    margin-top: 17px;
+    margin-top: 4px;
+}
+
+.theme-container {
+    padding: 14px;
+    cursor: pointer;
 }
 
 .theme {
     border-radius: 3px;
     box-shadow: 1px 1px rgba(0, 0, 0, 0.2);
-    cursor: pointer;
     filter: contrast(0%) brightness(120%);
     height: 10px;
     width: 10px;
+    transition: all 200ms;
+}
+
+.theme-container:hover .theme {
+    box-shadow: 0 0 0 14px;
+    filter: none;
 }
 
 .theme-active {
@@ -1497,18 +1508,6 @@ progress::-webkit-progress-value {
 .theme-pink {
     background: #e91e63;
     color: rgba(233, 30, 99, 0.5);
-}
-
-.theme:hover {
-    animation: glow 1s infinite alternate;
-    box-shadow: none;
-    filter: none;
-}
-
-@keyframes glow {
-    to {
-        box-shadow: 0 0 0 10px;
-    }
 }
 
 /*******************************/
