--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -70,10 +70,9 @@
           <input id="search-field" class="search-input" type="text" name="q" autocomplete="off"
                  th:placeholder="#{search-placeholder}" aria-label="search"/>
           <button type="submit" class="search-button">
-            <svg viewBox="0 0 72 72" class="search-icon" xmlns="http://www.w3.org/2000/svg">
-              <g transform="translate(-13.999989,-966.36219)">
-                <path d="m 42.998529,966.36219 c -15.97982,0 -28.99854,13.01861 -28.99854,28.99854 0,15.97987 13.0187,28.99857 28.99854,28.99857 6.91114,0 13.25932,-2.4431 18.24908,-6.4997 l 19.62402,19.624 c 1.17141,1.1714 3.0783,1.1715 4.24978,0 1.17147,-1.1715 1.17147,-3.0471 0,-4.2185 l -19.62401,-19.624 c 4.06479,-4.9923 6.49967,-11.3615 6.49967,-18.28037 0,-15.97993 -13.01871,-28.99854 -28.99854,-28.99854 z m 0,5.9997 c 12.73733,0 22.99884,10.26142 22.99884,22.99884 0,12.73727 -10.26153,22.99887 -22.99884,22.99887 -12.73731,0 -22.99884,-10.2616 -22.99884,-22.99887 0,-12.73742 10.26151,-22.99884 22.99884,-22.99884 z"></path>
-              </g>
+            <svg class="search-icon" viewBox="0 0 72 72">
+              <circle cx="29" cy="29" r="26" stroke-width="6"/>
+              <path d="m69 69-21-21" stroke-linecap="round" stroke-width="6"/>
             </svg>
           </button>
         </form>
