Update the logout icon and also store a copy of it as an svg file

--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -744,7 +744,8 @@ textarea:valid ~ label {
     cursor: pointer;
     height: 18px;
     vertical-align: middle;
-    fill: #838e9b;;
+    stroke: #758190;
+    fill: none;
 }
 
 /****************************************/
