--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -101,9 +101,9 @@
           </div>
         </div>
         <form th:action="@{/logout}" method="post" th:title="#{log-out}">
-          <svg viewBox="0 0 105 100" class="logout" xmlns="http://www.w3.org/2000/svg">
-            <path d=" M 42.47 10.75 C 53.11 8.72 64.72 11.05 73.31 17.76 C 75.80 19.79 73.06 24.36 70.09 23.12 C 67.31 21.89 64.88 19.99 62.01 18.95 C 50.90 14.51 37.55 16.79 28.46 24.54 C 17.12 33.85 13.40 50.96 19.83 64.15 C 25.76 77.28 40.88 85.36 55.11 82.91 C 60.58 82.27 65.35 79.44 70.09 76.88 C 73.01 75.51 75.83 80.23 73.32 82.24 C 61.42 91.49 44.08 92.37 30.97 85.14 C 21.24 79.87 13.83 70.45 11.21 59.68 C 8.79 50.08 10.10 39.59 14.87 30.92 C 20.46 20.54 30.88 12.90 42.47 10.75 Z"></path>
-            <path d=" M 73.76 38.18 C 72.15 35.85 74.89 32.45 77.53 33.46 C 80.44 35.08 82.43 37.91 84.86 40.15 C 87.61 43.14 90.95 45.63 93.24 49.02 C 93.96 51.32 91.72 52.88 90.39 54.36 C 86.21 58.20 82.56 62.61 78.20 66.26 C 75.67 68.14 71.81 64.39 73.72 61.83 C 76.15 58.69 79.26 56.16 81.97 53.27 C 69.95 53.16 57.92 53.46 45.91 53.14 C 42.40 52.96 42.55 46.87 46.03 46.77 C 57.98 46.50 69.95 46.76 81.90 46.66 C 79.26 43.77 76.14 41.30 73.76 38.18 Z"></path>
+          <svg class="logout" viewBox="0 0 128 128" stroke-linecap="round" stroke-linejoin="round" stroke-width="10">
+            <path d="m56 64h67m-21-21 21 21-21 21"/>
+            <path d="m90.499 113.36a56.999 56.999 0 0 1-72.163-12.724 56.999 56.999 0 0 1 4e-6 -73.276 56.999 56.999 0 0 1 72.163-12.724"/>
           </svg>
         </form>
       </div>
