--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -47,7 +47,7 @@
     </div>
     <div class="logo-search-container">
       <a th:href="@{/}" th:title="#{name}">
-        <svg class="brand-logo" width="32" height="32" version="1.1" viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg">
+        <svg class="brand-logo" viewBox="0 0 32 32">
           <g stroke-width="4.56763792">
             <path d="m12.941641 27.61861c-5.3289107 0-10.6578224-3.80636-10.6578224-10.65782s5.3289117-10.65782 10.6578224-10.65782c4.567638 0 8.75464 0.99539 12.941641-1.90319" stroke-dasharray="47" stroke-dashoffset="47">
               <animate id="anim1" attributeName="stroke-dashoffset" from="47" to="0" dur="1500ms" fill="freeze" calcMode="spline" keyTimes="0; 1" keySplines=".42,0,.58,1" begin="0s; anim2.end"></animate>
@@ -201,7 +201,7 @@
         <path d="M 65.31,52.568 C 60.734,67.18 55.629,69.38 55.629,69.38 69.976,42.36 44.099,24.931 44.099,24.931 c 12.06,16.987 2.992,31.512 2.992,31.512 0,0 5.633,-12.06 -8.802,-24.733 C 22.184,16.834 30.191,4.601 30.191,4.601 16.023,9.441 15.582,22.205 18.483,27.309 26.846,41.215 23.59,47.995 23.59,47.995 23.413,44.913 21.126,42.624 13.91,37.431 6.691,32.238 11.177,22.732 11.177,22.732 6.516,25.637 2.378,35.142 8.011,41.745 18.309,54.595 9.771,61.988 9.771,61.988 13.204,47.729 0,44.56 0,44.56 10.211,52.834 0.795,58.996 2.377,68.675 5.369,91.474 31.599,89.98 31.599,89.98 c 0.747,-0.007 1.452,-0.053 2.166,-0.09 -9.865,-0.025 -12.61,-6.185 -10.173,-8.542 0,0 4.004,-3.469 -0.827,-9.497 -2.643,-3.101 -0.701,-7.56 1.486,-8.921 0,0 -2.105,4.459 1.281,6.896 3.387,2.437 4.461,3.509 4.542,4.955 0,0 1.528,-3.182 -2.396,-9.704 -1.361,-2.393 -1.155,-8.383 5.494,-10.653 0,0 -3.758,5.738 3.798,12.72 6.772,5.943 4.131,11.604 4.131,11.604 0,0 4.253,-6.814 -1.405,-14.786 0,0 12.143,8.18 5.412,20.855 0,0 -1.569,3.591 -7.495,4.726 C 67.716,85.39 65.31,52.568 65.31,52.568 Z"></path>
       </svg>
       <div class="share-container">
-        <svg class="share-icon" viewBox="0 0 70 78" xmlns="http://www.w3.org/2000/svg">
+        <svg class="share-icon" viewBox="0 0 70 78">
           <path d="m 57.1,25.800004 c 7.1,0 12.9,-5.8 12.9,-12.9 C 70,5.799997 64.2,0 57.1,0 50,0 44.2,5.799997 44.2,12.900004 c 0,1.4 0.2,2.7 0.6,3.9 l -22.3,12.9 c -2.4,-2.6 -5.8,-4.2 -9.5,-4.2 -7.2,0 -13,5.8 -13,12.9 0,7.1 5.8,12.9 12.9,12.9 3.8,0 7.2,-1.6 9.5,-4.2 l 22.3,12.9 c -0.4,1.2 -0.6,2.6 -0.6,3.9 0,7.1 5.8,12.9 12.9,12.9 7.1,0 12.9,-5.8 12.9,-12.9 0,-7.1 -5.8,-12.9 -12.9,-12.9 -3.8,0 -7.2,1.6 -9.5,4.2 l -22.3,-12.9 c 0.4,-1.2 0.6,-2.6 0.6,-3.9 0,-1.4 -0.2,-2.7 -0.6,-3.9 l 22.3,-12.9 c 2.4,2.6 5.8,4.2 9.6,4.2 z"></path>
         </svg>
         <div class="share-content">
