--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -1049,8 +1049,9 @@ progress::-webkit-progress-value {
     cursor: pointer;
     margin-right: 4px;
     vertical-align: middle;
-    width: 13px;
+    width: 14px;
     fill: var(--icons-color);
+    stroke: var(--icons-color);
 }
 
 .meters {
