Update the search icon

--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -70,9 +70,8 @@
           <input id="search-field" class="search-input" type="text" name="q" autocomplete="off"
                  th:placeholder="#{search-placeholder}" aria-label="search"/>
           <button type="submit" class="search-button">
-            <svg class="search-icon" viewBox="0 0 72 72">
-              <circle cx="29" cy="29" r="26" stroke-width="6"/>
-              <path d="m69 69-21-21" stroke-linecap="round" stroke-width="6"/>
+            <svg class="search-icon" viewBox="0 0 128 128">
+              <path fill="none" stroke-linecap="round" stroke-width="11" d="m122 122-37-37m12.737-33.466c0 25.517-20.686 46.203-46.203 46.203s-46.203-20.686-46.203-46.203 20.686-46.203 46.203-46.203 46.203 20.686 46.203 46.203z"/>
             </svg>
           </button>
         </form>
