--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -203,9 +203,9 @@
         <svg class="share-icon" viewBox="0 0 128 128">
           <!--<use th:href="@{/img/ic-share.svg#share}"></use>-->
           <circle cx="101" cy="21" r="21"/>
-          <path d="m102 21-75 43" fill="none" stroke-linecap="round" stroke-width="10"/>
+          <path d="m102 21-75 43" stroke-linecap="round" stroke-width="10"/>
           <circle cx="27" cy="64" r="21"/>
-          <path d="m101 107-74-43" fill="none" stroke-linecap="round" stroke-width="10"/>
+          <path d="m101 107-74-43" stroke-linecap="round" stroke-width="10"/>
           <circle cx="101" cy="107" r="21"/>
         </svg>
         <div class="share-content">
